# FunctionalCoding

./: .gitignore  Cargo.toml  one_acc_smry.proto  run.sh
config-files/: config.json  method-req-fields.json  req-fields.json  run.sh
src/: configuration_parameters.rs  log.rs  macros.rs  main.rs  params.rs  process.rs  statics.rs
src/stamp_ftp/: io.rs  mod.rs
src/stamp_ftp/calculations/: acc_level.rs  cf_level.rs  default.rs  derive_output_fields.rs  lock.rs  margin.rs  mod.rs  rep_lock.rs
src/stamp_ftp/calculations/bm_rates/: mod.rs  ttl_bals.rs
src/stamp_ftp/one_acc_smry/: accounts.rs  appender.rs  convertion.rs  mod.rs
src/stamp_ftp/reader/: adjustments.rs  avg_bal.rs  bal_slab.rs  config.rs  currency_convertion.rs  method.rs  mod.rs  rules.rs  spread.rs
src/stamp_ftp/req_fields/: acc_field_names.rs  method_fields.rs  mod.rs
