[package]
name = "ftp_mat_stamp"
version = "2.0.0"
authors = ["Tarun Jaiswal <tarunjais28@gmail.com>"]
edition = "2018"

[dependencies]
clap="2.31.2"
sdb_dyn_proto_rdr = { path = "../../../demo/libraries/sdb_dyn_proto_rdr" }
sdb_agg_rules = { path = "../../libraries/sdb_agg_rules" }
ftp_method = { path = "../../libraries/ftp_method" }
sdb_agg_rules_adj = { path = "../../libraries/sdb_agg_rules_adj" }
bm_reader = { path = "../../libraries/bm_reader" }
sdb_io ={path = "../../../demo/libraries/sdb_io" }
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
slog-async = "2.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
rbconcurrency = { path = "../../../demo/libraries/RBConcurrency" }
rbdate = { path = "../../../demo/libraries/RBDate" }
health_report = { path = "../../../demo/libraries/health_report" }
protobuf = { version = "2.17.0", features = ["with-bytes"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
libmath = "0.2.1"
lazy_static = "1.4.0"
